// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`create fail 1`] = `
Object {
  "Options": Object {
    "ID": "component",
    "createProject": [Function],
    "dataSaving": false,
    "directives": Object {
      "EventListener": [Function],
      "UpdateOnEvent": [Function],
      "disabled": [Function],
      "hrefto": [Function],
      "onChangeUpdate": [Function],
      "onInputUpdate": [Function],
      "onclick": [Function],
      "oninput": [Function],
      "onload": [Function],
      "onresize": [Function],
      "onscroll": [Function],
      "onselect": [Function],
      "onsubmit": [Function],
      "ref": [Function],
    },
    "errors": Array [
      "Create project fail!",
    ],
  },
  "html": "
 <ul class=\\"breadcrumb\\">
   <li>
     <a href=\\"/\\"> Projects </a>
   </li>
   <!--0-->
   <li>Create project</li>
 </ul>
 <!--0-->
 <!--0-->
 <ul class=\\"errors-panel\\">
   <li>Create project fail!</li>
 </ul>
 <!--0-->
 <!--0-->
 <div class=\\"project-create-form\\">
   <form>
     <div class=\\"group\\">
       <input name=\\"name\\" type=\\"text\\" required=\\"\\"><span class=\\"highlight\\"></span><span class=\\"bar\\"></span>
       <label>Name</label>
     </div>
     <div class=\\"group\\">
       <input name=\\"cwd\\" type=\\"text\\" required=\\"\\"><span class=\\"highlight\\"></span><span class=\\"bar\\"></span>
       <label>Current Work Directory</label>
     </div>
     <div class=\\"group\\">
       <button type=\\"submit\\"><span>Create</span></button>
     </div>
   </form>
 </div>
 <!--1-->
 <!--0-->
 <!--1-->
 <!--0-->
",
}
`;

exports[`renders correctly 1`] = `
Object {
  "Options": Object {
    "ID": "component",
    "createProject": [Function],
    "dataSaving": false,
    "directives": Object {
      "EventListener": [Function],
      "UpdateOnEvent": [Function],
      "disabled": [Function],
      "hrefto": [Function],
      "onChangeUpdate": [Function],
      "onInputUpdate": [Function],
      "onclick": [Function],
      "oninput": [Function],
      "onload": [Function],
      "onresize": [Function],
      "onscroll": [Function],
      "onselect": [Function],
      "onsubmit": [Function],
      "ref": [Function],
    },
    "errors": Array [],
  },
  "html": "
 <ul class=\\"breadcrumb\\">
   <li>
     <a href=\\"/\\"> Projects </a>
   </li>
   <!--0-->
   <li>Create project</li>
 </ul>
 <!--0-->
 <!--0-->
 <!--0-->
 <!--0-->
 <div class=\\"project-create-form\\">
   <form>
     <div class=\\"group\\">
       <input name=\\"name\\" type=\\"text\\" required=\\"\\"><span class=\\"highlight\\"></span><span class=\\"bar\\"></span>
       <label>Name</label>
     </div>
     <div class=\\"group\\">
       <input name=\\"cwd\\" type=\\"text\\" required=\\"\\"><span class=\\"highlight\\"></span><span class=\\"bar\\"></span>
       <label>Current Work Directory</label>
     </div>
     <div class=\\"group\\">
       <button type=\\"submit\\"><span>Create</span></button>
     </div>
   </form>
 </div>
 <!--1-->
 <!--0-->
 <!--1-->
 <!--0-->
",
}
`;
